--- a/src/view/Wizard.fxml
+++ b/src/view/Wizard.fxml
@@ -5,20 +5,55 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
 <AnchorPane prefHeight="600.0" prefWidth="480.0" styleClass="principal" stylesheets="@estilo.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="156.0" layoutY="153.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="pane1" styleClass="pane1" layoutX="156.0" layoutY="153.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label alignment="CENTER" layoutX="200.0" layoutY="95.0" styleClass="title" text="Título 1" textAlignment="CENTER" AnchorPane.topAnchor="95.0" />
-            <Label layoutX="198.0" layoutY="340.0" styleClass="description" text="Descripción" />
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="173.0" layoutY="164.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../img/mobile-phone.png" />
-               </image>
-            </ImageView>
+            <VBox alignment="CENTER" layoutX="165.0" layoutY="71.0" prefHeight="200.0" prefWidth="100.0" spacing="25.0">
+               <children>
+                  <Label alignment="CENTER" styleClass="title" text="Título 1" textAlignment="CENTER" />
+                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/mobile-phone.png" />
+                     </image>
+                  </ImageView>
+                  <Label styleClass="description" text="Descripción" />
+               </children>
+            </VBox>
          </children>
       </AnchorPane>
+       <AnchorPane fx:id="pane2" styleClass="pane2" layoutX="156.0" layoutY="153.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+           <children>
+               <VBox alignment="CENTER" layoutX="165.0" layoutY="71.0" prefHeight="200.0" prefWidth="100.0" spacing="25.0">
+                   <children>
+                       <Label alignment="CENTER" styleClass="title" text="Título 1" textAlignment="CENTER" />
+                       <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                               <Image url="@../img/mobile-phone.png" />
+                           </image>
+                       </ImageView>
+                       <Label styleClass="description" text="Descripción" />
+                   </children>
+               </VBox>
+           </children>
+       </AnchorPane>
+       <AnchorPane fx:id="pane3" styleClass="pane3" layoutX="156.0" layoutY="153.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+           <children>
+               <VBox alignment="CENTER" layoutX="165.0" layoutY="71.0" prefHeight="200.0" prefWidth="100.0" spacing="25.0">
+                   <children>
+                       <Label alignment="CENTER" styleClass="title" text="Título 1" textAlignment="CENTER" />
+                       <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                               <Image url="@../img/mobile-phone.png" />
+                           </image>
+                       </ImageView>
+                       <Label styleClass="description" text="Descripción" />
+                   </children>
+               </VBox>
+           </children>
+       </AnchorPane>
       <JFXButton layoutX="68.0" layoutY="519.0" prefHeight="50.0" prefWidth="50.0" styleClass="nextButton" text="&lt;" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="50.0" />
       <JFXButton layoutX="371.0" layoutY="519.0" prefHeight="50.0" prefWidth="50.0" styleClass="nextButton" text="&gt;" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="50.0" />
       <Label layoutX="227.0" layoutY="536.0" styleClass="position" text="1/3" />
