--- a/src/view/Wizard.fxml
+++ b/src/view/Wizard.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="600.0" prefWidth="480.0" styleClass="principal" stylesheets="@estilo.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:controller="view.WizardController" prefHeight="600.0" prefWidth="480.0" styleClass="principal" stylesheets="@estilo.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane fx:id="pane1" styleClass="pane1" layoutX="156.0" layoutY="153.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -56,6 +56,6 @@
        </AnchorPane>
       <JFXButton layoutX="68.0" layoutY="519.0" prefHeight="50.0" prefWidth="50.0" styleClass="nextButton" text="&lt;" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="50.0" />
       <JFXButton layoutX="371.0" layoutY="519.0" prefHeight="50.0" prefWidth="50.0" styleClass="nextButton" text="&gt;" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="50.0" />
-      <Label layoutX="227.0" layoutY="536.0" styleClass="position" text="1/3" />
+      <Label fx:id="countLabel" layoutX="227.0" layoutY="536.0" styleClass="position" text="1/3" />
    </children>
 </AnchorPane>
