--- a/src/view/Wizard.fxml
+++ b/src/view/Wizard.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:controller="view.WizardController" prefHeight="600.0" prefWidth="480.0" styleClass="principal" stylesheets="@estilo.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="600.0" prefWidth="480.0" styleClass="principal" stylesheets="@estilo.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.WizardController">
    <children>
-      <AnchorPane fx:id="pane1" styleClass="pane1" layoutX="156.0" layoutY="153.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="pane1" layoutX="156.0" layoutY="153.0" prefHeight="200.0" prefWidth="200.0" styleClass="pane1" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <VBox alignment="CENTER" layoutX="165.0" layoutY="71.0" prefHeight="200.0" prefWidth="100.0" spacing="25.0">
                <children>
@@ -24,7 +24,7 @@
             </VBox>
          </children>
       </AnchorPane>
-       <AnchorPane fx:id="pane2" styleClass="pane2" layoutX="156.0" layoutY="153.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+       <AnchorPane fx:id="pane2" layoutX="156.0" layoutY="153.0" prefHeight="200.0" prefWidth="200.0" styleClass="pane2" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
            <children>
                <VBox alignment="CENTER" layoutX="165.0" layoutY="71.0" prefHeight="200.0" prefWidth="100.0" spacing="25.0">
                    <children>
@@ -39,7 +39,7 @@
                </VBox>
            </children>
        </AnchorPane>
-       <AnchorPane fx:id="pane3" styleClass="pane3" layoutX="156.0" layoutY="153.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+       <AnchorPane fx:id="pane3" layoutX="156.0" layoutY="153.0" prefHeight="200.0" prefWidth="200.0" styleClass="pane3" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
            <children>
                <VBox alignment="CENTER" layoutX="165.0" layoutY="71.0" prefHeight="200.0" prefWidth="100.0" spacing="25.0">
                    <children>
@@ -54,8 +54,8 @@
                </VBox>
            </children>
        </AnchorPane>
-      <JFXButton layoutX="68.0" layoutY="519.0" prefHeight="50.0" prefWidth="50.0" styleClass="nextButton" text="&lt;" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="50.0" />
-      <JFXButton layoutX="371.0" layoutY="519.0" prefHeight="50.0" prefWidth="50.0" styleClass="nextButton" text="&gt;" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="50.0" />
+      <JFXButton layoutX="68.0" layoutY="519.0" onAction="#backAction" prefHeight="50.0" prefWidth="50.0" styleClass="nextButton" text="&lt;" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="50.0" />
+      <JFXButton layoutX="371.0" layoutY="519.0" onAction="#nextAction" prefHeight="50.0" prefWidth="50.0" styleClass="nextButton" text="&gt;" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="50.0" />
       <Label fx:id="countLabel" layoutX="227.0" layoutY="536.0" styleClass="position" text="1/3" />
    </children>
 </AnchorPane>
