--- a/src/view/Wizard.fxml
+++ b/src/view/Wizard.fxml
@@ -12,7 +12,7 @@
    <children>
       <AnchorPane fx:id="pane1" layoutX="156.0" layoutY="153.0" prefHeight="200.0" prefWidth="200.0" styleClass="pane1" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox alignment="CENTER" layoutX="165.0" layoutY="71.0" prefHeight="200.0" prefWidth="100.0" spacing="25.0">
+             <VBox alignment="CENTER" layoutX="90.0" layoutY="73.0" prefHeight="200.0" prefWidth="100.0" spacing="25.0">
                <children>
                   <Label alignment="CENTER" styleClass="title" text="Título 1" textAlignment="CENTER" />
                   <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
@@ -20,37 +20,37 @@
                         <Image url="@../img/mobile-phone.png" />
                      </image>
                   </ImageView>
-                  <Label styleClass="description" text="Descripción" />
+                   <Label minHeight="120.0" minWidth="300.0" styleClass="description" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." textAlignment="JUSTIFY" wrapText="true" />
                </children>
             </VBox>
          </children>
       </AnchorPane>
        <AnchorPane fx:id="pane2" layoutX="156.0" layoutY="153.0" prefHeight="200.0" prefWidth="200.0" styleClass="pane2" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
            <children>
-               <VBox alignment="CENTER" layoutX="165.0" layoutY="71.0" prefHeight="200.0" prefWidth="100.0" spacing="25.0">
+               <VBox alignment="CENTER" layoutX="90.0" layoutY="73.0" prefHeight="200.0" prefWidth="100.0" spacing="25.0">
                    <children>
-                       <Label alignment="CENTER" styleClass="title" text="Título 1" textAlignment="CENTER" />
+                       <Label alignment="CENTER" styleClass="title" text="Título 2" textAlignment="CENTER" />
                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                                <Image url="@../img/thumbs-up.png" />
                            </image>
                        </ImageView>
-                       <Label styleClass="description" text="Descripción" />
+                       <Label minHeight="120.0" minWidth="300.0" styleClass="description" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." textAlignment="JUSTIFY" wrapText="true" />
                    </children>
                </VBox>
            </children>
        </AnchorPane>
        <AnchorPane fx:id="pane3" layoutX="156.0" layoutY="153.0" prefHeight="200.0" prefWidth="200.0" styleClass="pane3" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
            <children>
-               <VBox alignment="CENTER" layoutX="165.0" layoutY="71.0" prefHeight="200.0" prefWidth="100.0" spacing="25.0">
+               <VBox alignment="CENTER" layoutX="90.0" layoutY="73.0" prefHeight="200.0" prefWidth="100.0" spacing="25.0">
                    <children>
-                       <Label alignment="CENTER" styleClass="title" text="Título 1" textAlignment="CENTER" />
+                       <Label alignment="CENTER" styleClass="title" text="Título 3" textAlignment="CENTER" />
                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                                <Image url="@../img/keyboard.png" />
                            </image>
                        </ImageView>
-                       <Label styleClass="description" text="Descripción" />
+                       <Label minHeight="120.0" minWidth="300.0" styleClass="description" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." textAlignment="JUSTIFY" wrapText="true" />
                    </children>
                </VBox>
            </children>
